--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,18 @@
     "development": {
       "plugins": ["transform-react-jsx-source"]
     }
-  }
+  },
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./src"],
+        "alias": {
+          "assets": "./assets",
+          "screens": "./src/screens",
+          "components": "./src/components"
+        }
+      }
+    ]
+  ]
 }
