--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start -c",
+    "android": "expo start -c --android",
+    "ios": "expo start -c --ios",
     "eject": "expo eject"
   },
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "tslib": "1.9.3"
+  },
+  "devDependencies": {
+    "@types/expo": "^27.0.12",
+    "@types/react": "^16.4.15",
+    "@types/react-native": "^0.57.2",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "react-native-typescript-transformer": "^1.2.10",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.1"
   }
 }
