--- a/package.json
+++ b/package.json
@@ -19,10 +19,24 @@
     "@types/react": "^16.4.15",
     "@types/react-native": "^0.57.2",
     "babel-plugin-module-resolver": "^3.1.1",
+    "husky": "^1.1.1",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3",
     "react-native-typescript-transformer": "^1.2.10",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
