--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["babel-preset-expo"],
+  "presets": ["babel-preset-expo", "react-native-dotenv"],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
@@ -13,7 +13,10 @@
         "alias": {
           "assets": "./assets",
           "screens": "./src/screens",
-          "components": "./src/components"
+          "components": "./src/components",
+          "env": "./src/env",
+
+          "dotenv": "react-native-dotenv"
         }
       }
     ]
