--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^1.1.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
+    "react-native-dotenv": "^0.2.0",
     "react-native-typescript-transformer": "^1.2.10",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
