feat: Add WebView and Scanner with react navigation

--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
           "screens": "./src/screens",
           "components": "./src/components",
           "env": "./src/env",
+          "constants": "./src/constants",
 
           "dotenv": "react-native-dotenv"
         }
