feat(BarCodeScanner): Add ask for camera permission

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,9 @@
           "components": "./src/components",
           "env": "./src/env",
           "constants": "./src/constants",
+          "hocs": "./src/hocs",
+          "utils": "./src/utils",
+          "helpers": "./src/helpers",
 
           "dotenv": "react-native-dotenv"
         }
