--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^8.0.0",
     "expo": "^30.0.1",
+    "native-base": "^2.8.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-navigation": "^2.17.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/expo": "^27.0.12",
+    "@types/expo__vector-icons": "^6.2.3",
     "@types/react": "^16.4.15",
     "@types/react-native": "^0.57.2",
     "@types/react-navigation": "^2.0.24",
