--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "store-rn",
-    "description": "This project is really great.",
-    "slug": "store-rn",
+    "name": "Store Làm Mộc",
+    "description": "Hệ thống siêu thị chuyên bán máy móc và dụng cụ làm mộc.",
+    "slug": "store-lam-moc",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.0.0",
+    "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.lammoc.store"
+    },
+    "android": {
+      "package": "com.lammoc.store"
     },
     "packagerOpts": {
       "assetExts": [
