fix(components/StatusBar): Fix color on Android

--- a/app.json
+++ b/app.json
@@ -20,6 +20,9 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "androidStatusBar": {
+      "backgroundColor": "#26323800"
+    },
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.lammoc.store"
