--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
     "expo": "^30.0.1",
+    "lodash": "^4.17.11",
     "native-base": "^2.8.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-navigation": "^2.17.0",
+    "recompose": "^0.30.0",
     "tslib": "1.9.3"
   },
   "devDependencies": {
     "@types/expo": "^27.0.12",
     "@types/expo__vector-icons": "^6.2.3",
+    "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.15",
     "@types/react-native": "^0.57.2",
     "@types/react-navigation": "^2.0.24",
+    "@types/recompose": "^0.27.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "husky": "^1.1.1",
     "lint-staged": "^7.3.0",
