--- a/app.json
+++ b/app.json
@@ -7,12 +7,17 @@
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
     "version": "0.1.0",
+    "primaryColor": "#263238",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#263238"
+    },
+    "notification": {
+      "icon": "./assets/images/logo.png",
+      "color": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -24,6 +29,7 @@
       "backgroundColor": "#26323800"
     },
     "ios": {
+      "buildNumber": "1",
       "supportsTablet": false,
       "bundleIdentifier": "com.lammoc.store"
     },
