--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "expo start -c",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build:ios": "expo build:ios",
+    "build:android": "expo build:android"
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
