--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["babel-preset-expo", "react-native-dotenv"],
+  "presets": ["babel-preset-expo"],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
@@ -19,9 +19,7 @@
           "hocs": "./src/hocs",
           "utils": "./src/utils",
           "helpers": "./src/helpers",
-          "navigations": "./src/navigations",
-
-          "dotenv": "react-native-dotenv"
+          "navigations": "./src/navigations"
         }
       }
     ]
