--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
+    "make:development": "node configs --env=development",
+    "make:staging": "node configs --env=staging",
+    "make:production": "node configs --env=production",
     "start": "expo start -c",
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "eject": "expo eject",
-    "build:ios": "expo build:ios",
-    "build:android": "expo build:android"
+    "build:staging:ios": "npm run make:staging && expo build:ios --release-channel staging",
+    "build:production:ios": "npm run make:production && expo build:ios --release-channel production",
+    "build:staging:android": "npm run make:staging && expo build:android --release-channel staging",
+    "build:production:android": "npm run make:production && expo build:android --release-channel production"
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
     "expo": "^30.0.1",
+    "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "native-base": "^2.8.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-navigation": "^2.17.0",
     "recompose": "^0.30.0",
+    "slack-notify": "^0.1.6",
     "tslib": "1.9.3"
   },
   "devDependencies": {
@@ -34,7 +41,6 @@
     "husky": "^1.1.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
-    "react-native-dotenv": "^0.2.0",
     "react-native-typescript-transformer": "^1.2.10",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
