--- a/app.json
+++ b/app.json
@@ -32,18 +32,24 @@
       "backgroundColor": "#26323800"
     },
     "ios": {
-      "buildNumber": "1",
+      "buildNumber": "2",
       "supportsTablet": false,
       "bundleIdentifier": "com.lammoc.store.staging",
-      "icon": "./assets/images/logo.ios.png"
+      "icon": "./assets/images/logo.ios.png",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Cho phép Store Làm Mộc sử dụng máy ảnh để quét mã vạch/mã QR"
+      }
     },
     "android": {
       "package": "com.lammoc.store.staging",
-      "versionCode": 1,
+      "versionCode": 2,
       "icon": "./assets/images/logo.android.png",
       "adaptiveIcon": {
         "backgroundColor": "#263238"
-      }
+      },
+      "permissions": [
+        "CAMERA"
+      ]
     },
     "packagerOpts": {
       "assetExts": [
