--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "native-base": "^2.8.1",
     "react": "16.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-modal": "^6.5.0",
     "react-navigation": "^2.18.0",
     "recompose": "^0.30.0",
     "slack-notify": "^0.1.6",
