--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Store Làm Mộc Staging",
+    "name": "Store Làm Mộc Dev",
     "description": "Hệ thống siêu thị chuyên bán máy móc và dụng cụ làm mộc.",
-    "slug": "store-lam-moc-staging",
+    "slug": "store-lam-moc-dev",
     "privacy": "unlisted",
     "sdkVersion": "30.0.0",
     "platforms": [
@@ -34,14 +34,14 @@
     "ios": {
       "buildNumber": "2",
       "supportsTablet": false,
-      "bundleIdentifier": "com.lammoc.store.staging",
+      "bundleIdentifier": "com.lammoc.store.dev",
       "icon": "./assets/images/logo.ios.png",
       "infoPlist": {
         "NSCameraUsageDescription": "Cho phép Store Làm Mộc sử dụng máy ảnh để quét mã vạch/mã QR"
       }
     },
     "android": {
-      "package": "com.lammoc.store.staging",
+      "package": "com.lammoc.store.dev",
       "versionCode": 2,
       "icon": "./assets/images/logo.android.png",
       "adaptiveIcon": {
@@ -64,8 +64,8 @@
       "transformer": "node_modules/react-native-typescript-transformer/index.js"
     },
     "extra": {
-      "STORE_WEB_URL": "https://store.mock.love",
-      "API_URL": "https://api.mock.love"
+      "STORE_WEB_URL": "http://10.68.97.129:3000",
+      "API_URL": "https://api.storelammoc.vn"
     }
   }
 }
