feat: Add OTA updating STORE-39
Merged in feature/STORE-39 (pull request #5)

STORE-39 [App Update] As a developer, I want the application have automatically updating

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "eject": "expo eject",
+    "publish:staging": "expo publish --release-channel staging",
+    "publish:production": "expo publish --release-channel production",
     "build:staging:ios": "npm run make:staging && expo build:ios --release-channel staging",
     "build:production:ios": "npm run make:production && expo build:ios --release-channel production",
     "build:staging:android": "npm run make:staging && expo build:android --release-channel staging",
