feat: Add native search box.
Merged in feature/STORE-77-searchbox (pull request #8)

STORE-77 [SearchBox] As a Customer, I want to have a native search box on mobile app.

--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,7 @@
           "constants": "./src/constants",
           "hocs": "./src/hocs",
           "utils": "./src/utils",
+          "services": "./src/services",
           "helpers": "./src/helpers",
           "navigations": "./src/navigations"
         }
