--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
+    "@types/numeral": "^0.0.25",
     "expo": "^30.0.1",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "native-base": "^2.8.1",
+    "numeral": "^2.0.6",
     "react": "16.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-modal": "^6.5.0",
