--- a/package.json
+++ b/package.json
@@ -21,36 +21,36 @@
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
     "@types/numeral": "^0.0.25",
-    "expo": "^30.0.1",
+    "expo": "^31.0.0",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "native-base": "^2.8.1",
     "numeral": "^2.0.6",
-    "react": "16.5.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
-    "react-native-modal": "^6.5.0",
-    "react-navigation": "^2.18.0",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-navigation": "^2.18.2",
     "recompose": "^0.30.0",
     "slack-notify": "^0.1.6",
     "tslib": "1.9.3"
   },
   "devDependencies": {
-    "@types/expo": "^27.0.13",
+    "@babel/plugin-transform-react-jsx-source": "^7.0.0",
+    "@types/expo": "^30.0.0",
     "@types/expo__vector-icons": "^6.2.3",
     "@types/lodash": "^4.14.117",
-    "@types/react": "^16.4.16",
-    "@types/react-native": "^0.57.6",
-    "@types/react-navigation": "^2.0.24",
+    "@types/react": "^16.4.18",
+    "@types/react-native": "^0.57.7",
+    "@types/react-navigation": "^2.13.0",
     "@types/recompose": "^0.27.0",
     "babel-plugin-module-resolver": "^3.1.1",
-    "husky": "^1.1.2",
-    "lint-staged": "^7.3.0",
+    "husky": "^1.1.3",
+    "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
     "react-native-typescript-transformer": "^1.2.10",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.6"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css}": [
