--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "eject": "expo eject",
-    "publish:staging": "expo publish --release-channel staging",
-    "publish:production": "expo publish --release-channel production",
-    "build:staging:ios": "npm run make:staging && expo build:ios --release-channel staging",
-    "build:production:ios": "npm run make:production && expo build:ios --release-channel production",
-    "build:staging:android": "npm run make:staging && expo build:android --release-channel staging",
-    "build:production:android": "npm run make:production && expo build:android --release-channel production"
+    "publish:staging": "expo publish --release-channel staging --non-interactive",
+    "publish:production": "expo publish --release-channel production --non-interactive",
+    "build:staging:ios": "npm run make:staging && expo build:ios --release-channel staging --non-interactive --no-publish",
+    "build:production:ios": "npm run make:production && expo build:ios --release-channel production --non-interactive --no-publish",
+    "build:staging:android": "npm run make:staging && expo build:android --release-channel staging --non-interactive --no-publish",
+    "build:production:android": "npm run make:production && expo build:android --release-channel production --non-interactive --no-publish"
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
