feat(Sentry): Add sentry.io bug reporter.
Merged in feature/STORE-79-as-a-developer-i-want-the-app-h (pull request #11)

STORE-79 As a Developer, I want the app has bug reporter

* feat(Sentry): Add Sentry reporter STORE-79

* feat(Sentry): Add sentry setting STORE-79

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-navigation": "^2.18.2",
     "recompose": "^0.30.0",
+    "sentry-expo": "^1.10.0",
     "slack-notify": "^0.1.6",
     "tslib": "1.9.3"
   },
