--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-source": "^7.0.0",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "@types/expo": "^30.0.0",
     "@types/expo__vector-icons": "^6.2.3",
     "@types/lodash": "^4.14.117",
@@ -61,6 +63,7 @@
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   }
