--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "store-app-rn",
   "author": "Dương Đỗ <duong@targeek.io>",
   "main": "node_modules/expo/AppEntry.js",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "make:development": "node configs --env=development",
@@ -50,6 +51,7 @@
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
     "react-native-typescript-transformer": "^1.2.10",
+    "standard-version": "^4.4.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
