feat(ci): add Jenkinsfile pipeline to build & dist iOS
STORE-81

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules/**/*
-.expo/*
 npm-debug.*
 
 */\.DS_Store
@@ -12,3 +11,6 @@ yarn-error\.log
 app\.json
 
 configs/*\.local\.json
+
+app.ipa
+app.apk
