--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "eject": "expo eject",
     "publish:staging": "expo publish --release-channel staging --non-interactive",
     "publish:production": "expo publish --release-channel production --non-interactive",
-    "build:staging:ios": "npm run make:staging && expo build:ios --release-channel staging --non-interactive --no-publish",
-    "build:production:ios": "npm run make:production && expo build:ios --release-channel production --non-interactive --no-publish",
-    "build:staging:android": "npm run make:staging && expo build:android --release-channel staging --non-interactive --no-publish",
-    "build:production:android": "npm run make:production && expo build:android --release-channel production --non-interactive --no-publish"
+    "build:staging:ios": "yarn make:staging && expo build:ios --release-channel staging --non-interactive --no-publish",
+    "build:production:ios": "yarn make:production && expo build:ios --release-channel production --non-interactive --no-publish",
+    "build:staging:android": "yarn make:staging && expo build:android --release-channel staging --non-interactive --no-publish",
+    "build:production:android": "yarn make:production && expo build:android --release-channel production --non-interactive --no-publish"
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
@@ -47,6 +47,7 @@
     "@types/react-navigation": "^2.13.0",
     "@types/recompose": "^0.27.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "expo-cli": "^2.4.0",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3",
