feat(travis-ci): add Slack notification
STORE-81

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,14 @@ language: node_js
 node_js: '8'
 cache: yarn
 
+notifications:
+  slack:
+    rooms:
+      - thichlammoc:KDr6DywMVHkRt21ZFIgy9Iom
+    on_start: change # default: never
+    on_success: change # default: always
+    on_failure: always # default: always
+
 # Build condition
 if: tag IS present
 
