--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.2",
   "private": true,
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "scripts": {
     "make:development": "node configs --env=development",
     "make:staging": "node configs --env=staging",
