--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ notifications:
 if: tag IS present
 
 before_install:
+  - openssl aes-256-cbc -K $encrypted_d35e2d5c767f_key -iv $encrypted_d35e2d5c767f_iv -in api-android-playstore.json.enc -out api-android-playstore.json -d
   - source ./build-scripts/env.sh
 
 install:
