--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo": "^31.0.5",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.0",
     "native-base": "^2.8.1",
     "numeral": "^2.0.6",
     "react": "16.5.0",
