feat(notification): add push notification for order & marketing
Merged in feature/STORE-43-push-notification (pull request #21)

[STORE-43] Handle received push notification

* feat(notification): add PUSH_ENDPOINT config

    STORE-43

* feat(notification): add service to grant permission & register to server

    STORE-43

* feat: add web app redux state listener, register client with user data

    STORE-43

* feat(notification): add in-app notification & handle notification select

    STORE-43

* feat(notification): handle notification link to web url

    STORE-43

* refactor: refactor postMessage data

    STORE-43

* feat(postMessageToWeb): modify `postMessageToWeb` API with JSON data

    BREAKING CHANGES: `postMessageToWeb` API now comes with 2 variables. The first one is action type, the second one is the data. Example: `postMessageToWeb(ACTIONS.TEST, { foo: bar })`.

    STORE-43

* refactor(constants): merge `constants/env` into `constants/global`

* refactor: rewrite `handleExternalLink`, rename it to `handleOpenURL`

* feat(external-link): add url dependencies

    STORE-43

* feat(notification): handle `TEXT` notification type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "target": "es2017",
     "paths": {
       "assets/*": ["../assets/*"]
-    }
+    },
+    "strictPropertyInitialization": false
   },
   "exclude": [
     "build",
