--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "numeral": "^2.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react-native-paper": "^2.2.8",
     "react-navigation": "^3.0.0",
     "recompose": "^0.30.0",
     "sentry-expo": "^1.10.0",
     "slack-notify": "^0.1.6",
-    "tslib": "1.9.3"
+    "tslib": "1.9.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-source": "^7.0.0",
