--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "store-app-rn",
   "author": "Dương Đỗ <duong@targeek.io>",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./index.js",
   "version": "1.2.1",
   "private": true,
   "engines": {
@@ -25,6 +25,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0",
     "@expo/vector-icons": "^8.0.0",
     "@types/numeral": "^0.0.25",
     "expo": "^31.0.6",
